--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+---
+# This is Jekyll.
+---
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -6,6 +10,6 @@
     <title>Home</title>
   </head>
   <body>
-    <h1>Hello, World</h1>
+    <h1>{{ "Hello, World" | downcase }}</h1>
   </body>
 </html>
