Update homepage to use templated title

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-# This is Jekyll.
+title: Home
 ---
 
 <!DOCTYPE html>
@@ -7,7 +7,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>{{ page.title }}</title>
   </head>
   <body>
     <h1>{{ "Hello, World" | downcase }}</h1>
